# N-Body-Simulation

./: .gitignore  CMakeLists.txt  README.md
data/: Earth.txt
include/: EulerIntegrator.hpp  IIntegrator.hpp  Pianeta.hpp  Planet.hpp  Reader.hpp  SolarSystem.hpp  Types.hpp  Units.hpp  Vector3D.hpp  matplotlibcpp.h
source/: EulerIntegrator.cpp  Pianeta.cpp  Planet.cpp  Reader.cpp  SolarSystem.cpp  main.cpp
tests/: test_reader.cpp  test_solarsystem.cpp
